cmake_minimum_required(VERSION 3.17)
project(DailyAlgo)

set(CMAKE_CXX_STANDARD 17)

add_executable(DailyAlgo main.cpp algoProblemSource/Path_Sum_Of_Binary_Tree.cpp algoProblemSource/Remove_duplicate_from_linked_list.cpp algoProblemHeaders/remove_duplicate_from_linked_list.hpp algoProblemHeaders/Path_Sum_of_Tree.hpp algoProblemHeaders/2D_array_word_search.hpp algoProblemSource/2D_array_word_search.cpp algoProblemHeaders/Binary_Search_Algos.hpp algoProblemSource/Binary_Search_Algos.cpp)